src/test/ui/hygiene/hygienic-label-4.stderr
error[E0426]: use of undeclared label `'x`
  --> $DIR/hygienic-label-4.rs:16:16
   |
LL |     foo!(break 'x); //~ ERROR use of undeclared label `'x`
   |                ^^ did you mean `'x`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
